# house-calendar-api

./: .dockerignore  .env  .gitignore  .python-version  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml
alembic/: env.py
alembic/versions/: 3e93b8e5c168_intial_schemas.py
config/: .gitignore  settings.toml
doc/copyright_templates/: python_template.py
house-calendar/: health.py  main.py
house_calendar/: __init__.py  __main__.py  api.py  config.py  datastore.py  dependencies.py  items.py  main.py  models.py  util.py
house_calendar.egg-info/: PKG-INFO  SOURCES.txt
house_calendar/db/: __init__.py  session.py  table_models.py  tables_models.py
house_calendar/routers/: events.py  events_dao.py  health.py  location.py  location_dao.py
house_calendar_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: alembic_init.sh  autogenerate_from_table_models.py  create_pod_def.sh  local-run.sh  podman-dn.sh  podman-up.sh
src/: conftest.py
src/house_calendar/: __init__.py  __main__.py  api.py  config.py  datastore.py  dependencies.py  models.py  util.py
src/house_calendar/db/: __init__.py  session.py  table_models.py
src/house_calendar/routers/: __init__.py  events.py  events_dao.py  health.py  location.py
src/house_calendar_events/: __init__.py  __main__.py  api.py  config.py  dependencies.py  models.py  util.py
src/house_calendar_events/db/: __init__.py  session.py  table_models.py
src/house_calendar_events/routers/: events.py  events_dao.py  health.py
src/house_calendar_events_init/: env.py
src/house_calendar_events_init/versions/: 0ff88225f044_uuid_notify_trigger.py  2e27702c2103_create_uuid_notify_trigger.py  3e93b8e5c168_intial_schemas.py
src/test/: conftest.py  test_api.py  test_api_events.py  test_async_client.py  test_config.py  test_events_dao.py  test_intg_uuid_notify.py  test_intg_uuid_sequence_id.py  test_items.py
src/test/fixtures/: async_client.py  db_fixtures.py  event_intg_fixtures.py  events_fixtures.py
test/: conftest.py  test_api.py  test_api_events.py  test_api_location.py  test_config.py  test_events_dao.py  test_intg_api.py  test_items.py
test/fixtures/: async_client.py  db_fixtures.py  event_intg_fixtures.py  events_fixtures.py
