
[tool.poetry]
name = "house_calendar_events"
version = "0.8.4"
description = "A microservice to provide CRUD action on house calendar events"
authors = ["Michael Penhallegon <mike@hematite.tech>"]
license = "Apache-2.0"
packages = [
    {include="house_calendar_events/**/*.py", from="src", format="wheel"},
]
include=["config/*.toml"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
SQLAlchemy = "^1.4.40"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
httpx = "^0.23.0"
mypy = "^0.971"
wheel = "^0.37.1"
safety = "^2.1.1"
requests = "^2.28.1"
ipdb = "^0.13.9"
tox = "^3.25.1"
pytest-asyncio = "^0.19.0"
isort = "^5.10.1"
pytest-dotenv = "^0.5.2"
black = "^22.6.0"
flake8 = "^5.0.4"

[tool.mypy]
python_version="3.10"

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "sqlalchemy",
    "sqlalchemy.*",
    "house_calendar_events.db.table_models",
    "dynaconf",
    "psycopg2",
    "conftest"
]
ignore_missing_imports=true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
